calamares-qml-settings-nitrux (1.6.8+new-dev) nitrux; urgency=medium

  * Set Calamares to create a default hostname.

 -- Uri Herrera 
calamares-qml-settings-nitrux (1.6.7+new-dev) nitrux; urgency=medium

  * Delete module configuration files just comment the content.
  * Add text to Users module hostname field to indicate NOT TO PUT SPACES IN THE HOSTNAME.

 -- Uri Herrera <uri_herrera@nxos.org>  Mon, 10 Jun 2024 14:27:00 -0500

calamares-qml-settings-nitrux (1.6.6+new-dev) nitrux; urgency=medium

  * Don't delete module configuration files just comment the content.

 -- Uri Herrera <uri_herrera@nxos.org>  Mon, 03 Jun 2024 16:57:00 -0500

calamares-qml-settings-nitrux (1.6.5+new-dev) nitrux; urgency=medium

  * Update branding.

 -- Uri Herrera <uri_herrera@nxos.org>  Mon, 03 Jun 2024 05:27:00 -0500

calamares-qml-settings-nitrux (1.6.4+new-dev) nitrux; urgency=medium

  * Use zstd and zsmalloc for zswap.

 -- Uri Herrera <uri_herrera@nxos.org>  Tue, 28 May 2024 19:15:00 -0500

calamares-qml-settings-nitrux (1.6.3+new-dev) nitrux; urgency=medium

  * Add kernel parameter to disable USB auto-suspend.

 -- Uri Herrera <uri_herrera@nxos.org>  Mon, 27 May 2024 04:50:00 -0500

calamares-qml-settings-nitrux (1.6.2+new-dev) nitrux; urgency=medium

  * Add kernel parameter to Fill freed pages and heap objects with zeroes.
  * Add kernel parameter to Disable the merging of slabs of similar sizes.
  * Add kernel parameter to enable Redzoning which adds extra areas around slabs that detect when a slab is overwritten past its real size, which can help detect overflows.
  * Add kernel parameter to Disable Virtual syscalls.
  * Add kernel parameter to Randomize kernel stack offset on syscall entry.

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 23 May 2024 04:17:00 -0500

calamares-qml-settings-nitrux (1.6.1+new-dev) nitrux; urgency=medium

  * Add kernel parameter to enable shuffling of pages in the memory allocator.
